--- a/pa4/Makefile
+++ b/pa4/Makefile
@@ -1,9 +1,8 @@
-
 CFLG=-Wall -O0 -w -g -std=c++11
 LIBS=-lpthread
 CC=g++
 
-# Main target
+# Main 
 all: perMessageHostOne perMessageHostTwo perProtoHostOne perProtoHostTwo
 
 # Compile rules
@@ -12,17 +11,11 @@ all: perMessageHostOne perMessageHostTwo perProtoHostOne perProtoHostTwo
 .cpp.o:
 	g++ -c $(CFLG) $<
 
-perMessageTest:perMessageTest.o
-	$(CC) -o $@ $(CFLG) perMessage.cpp threadpool.cpp message.cpp $^ $(LIBS)
-
 perMessageHostOne:perMessageHostOne.o
 	$(CC) -o $@ $(CFLG) perMessage.cpp threadpool.cpp message.cpp $^ $(LIBS)
 
 perMessageHostTwo:perMessageHostTwo.o
 	$(CC) -o $@ $(CFLG) perMessage.cpp threadpool.cpp message.cpp $^ $(LIBS)
-
-perProtoTest:perProtoTest.o
-	$(CC) -o $@ $(CFLG) perProto.cpp threadpool.cpp message.cpp $^ $(LIBS)
 
 perProtoHostOne:perProtoHostOne.o
 	$(CC) -o $@ $(CFLG) perProto.cpp threadpool.cpp message.cpp $^ $(LIBS)
@@ -31,4 +24,4 @@ perProtoHostTwo:perProtoHostTwo.o
 	$(CC) -o $@ $(CFLG) perProto.cpp threadpool.cpp message.cpp $^ $(LIBS)	
 
 clean:
-	rm -f perProtoTest perMessageTest perMessageHostOne perMessageHostTwo perProtoHostOne perProtoHostTwo *.o *.a
+	rm -f perMessageTest perMessageHostOne perMessageHostTwo perProtoHostOne perProtoHostTwo *.o *.a
